[metadata]
name = tqueues
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Rethinkdb job queues
description-file = README.rst
home-page = https://github.com/XayOn/tqueues
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: GNU/Linux
    Programming Language :: Python
keywords =
    jobs
    rethinkdb
    queues
[files]
packages =
    tqueues
[entry_points]
console_scripts =
    tqueues_worker = tqueues:client
    tqueues_dispatcher = tqueues:server
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
